accuracy data from benchmarks