@@ -1,36 +1,28 @@
 package xfp.jmh;
 
-import java.util.concurrent.TimeUnit;
+import xfp.java.accumulators.Accumulator;
 
-import org.openjdk.jmh.annotations.Benchmark;
-import org.openjdk.jmh.annotations.BenchmarkMode;
-import org.openjdk.jmh.annotations.Mode;
-import org.openjdk.jmh.annotations.OutputTimeUnit;
-import org.openjdk.jmh.annotations.Scope;
-import org.openjdk.jmh.annotations.State;
-
-// java -ea --illegal-access=warn -jar target/benchmarks.jar
-
-/** Benchmark double sums.
+/** Benchmark <code>double[]</code> sums.
  * 
  * <pre>
  * java -ea -jar target\benchmarks.jar Sum
  * </pre>
  * @author palisades dot lakes at gmail dot com
- * @version 2019-04-02
+ * @version 2019-04-03
  */
-@SuppressWarnings("unchecked")
-@State(Scope.Thread)
-@BenchmarkMode(Mode.AverageTime)
-@OutputTimeUnit(TimeUnit.MILLISECONDS)
+
+//@SuppressWarnings("unchecked")
+//@State(Scope.Thread)
+//@BenchmarkMode(Mode.AverageTime)
+//@OutputTimeUnit(TimeUnit.MILLISECONDS)
+
 public class L2 extends Base {
 
-  @Benchmark
-  public final double l2 () { 
-    final double pred = 
-      a.clear().add2All(x0).add2All(x1).doubleValue();
-    final double residual = trueSum - pred; 
-    return residual; }
+  @Override
+  public final double compute (final Accumulator ac,
+                               final double[] z0,
+                               final double[] z1) { 
+    return a.clear().add2All(x0).add2All(x1).doubleValue(); }
 
   //--------------------------------------------------------------
 }
